# xplore_rasberry

./: .gitignore  auto_plan.md  xplore.md
rover_commands/: setup.py
rover_commands/rover_commands/: autonomous_node.py
rover_xplore/: package.xml  setup.cfg  setup.py
rover_xplore/rover_xplore/: aruco_node.py  camera_node.py  mode_manager_node.py  motor_controller_node.py  teleop_receiver_node.py
scripts/: start_camera.sh
