<?xml version="1.0"?>
<package format="3">
  <name>rover_xplore</name>
  <version>2.0.0</version>
  <description>Rover XPlore - Navigation autonome et teleop</description>
  <maintainer email="hady.azzy@epfl.ch">Hady</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
